style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
*{
    margin:0;
    padding:0;
    box-sizing:border-box;
    font-family:'poppins',sans-serif;
}
html{
    scroll-behavior:smooth;
}
section{
    flex-direction: column;
    display: flex;


}
nav{
    position:fixed;
    left:50%;
    width:70%;
    transform: translateX(-50%);
    display:flex;
    justify-content: space-between;
    align-items: center;
    height:60px;
    backdrop-filter: blur(3px) ;/*scroll krte waqt translutent feel hoga*/
    background:rgba(131, 119, 119, 0.1);
    border-radius: 30px;
    top:12px;
    padding:33px 13px;
    border:1px solid rgba(237, 237, 237, 0.9);
    box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.2);
    
    
}

.about a{
    margin:0 12px;
    text-decoration: none;
    color:black;
    justify-content: space-evenly;
    padding:8px 19px;
    
    transition: 0.6s;
    

}

.about a:hover{
    border-bottom:3px solid rgb(167, 35, 248);
    transform: scale(1.1);
    background-color: rgb(252, 218, 253);
    border-radius:50px;
    
    
}
.btn{
    text-decoration: none;
}

 .btn button {
    display: flex;
    text-decoration: none;
    border-radius:50px;
    padding:10px 24px;
    right:28px;
    cursor:pointer;
    background-color: transparent;
    font-size: 14px;
    font-weight:600;
    
    transition:0.6s;
    overflow: hidden;
    z-index: 1;
    position: relative;
    background-color: rgb(212, 212, 212);
    border:2px solid rgb(126, 126, 126);

}
 .btn button::before{
    content: '';
    position: absolute;
    background-color: rgb(152, 113, 223);
    z-index:-1;
    height: 100%;
    width: 0;
    top:0;
    left:0; 
    transition: 0.7s ;


}
.btn button:hover::before{
    width: 100%;
    
}
.btn button:hover{
    color:rgb(247, 229, 229);
}


 .logo{    
    margin: 30px -100px 0 1px;
    display: flex;
    width:160px;
    height:120px;
    cursor:pointer;
    

}

.content{
    margin:200px 10px 100px 100px;
    height:120px;
    width: 500px;
    text-align: left;
    
}

.para{
    margin-top:30px;
    
}
.jj{
    height:550px;
    width:700px;
    float: right;
    margin-right:80px;
    transform: translateY(-50%);
}
@media (max-width: 1024px) {
  .jj {
    height: 490px;
    width: 540px;
    margin-right: 10px;

  }
  nav{
    z-index: 1000;
  }
  .logo{
    transform: translateX(-26%);
  }

  .content {
    display: flex;
    flex-direction: column;
    margin-left: 10px;

  }
  h1{
    text-align: center;
  }
  .subject{
    position: relative;
  }
  .downloads {
    transform: translateX(15%);

  }
  .motive{
    display: flex;
    border:2px solid black;
    
    padding:50px;
    background-color: rgb(72, 71, 71);
    color: white;
    
    width: 100vw;
    
    justify-content: center;
    text-align: center;
    gap:100px;

}
}
.para{
    line-height: 1.8;

}
span.inves{
    color: rgb(255, 72, 0);
    transition: 0.5s;

}
span.inves:hover{
    text-decoration-style:wavy;
    text-decoration-line: underline;
      text-decoration-color: rgb(157, 175, 135);

}
.under{
    background-color:rgb(240, 200, 206);
    border-radius:6px;
    margin-left: 2px;
    padding:0 3px;
    display:inline-block;
    text-decoration-line: underline;
  text-decoration-style: wavy;
  text-decoration-color: rgb(88, 49, 98);
  transition: 0.5s;
}
.under:hover{
    background-color: rgba(154, 101, 163, 0.824);
    color:rgb(248, 221, 221);
    text-decoration-style:wavy;
  text-decoration-color: rgb(24, 4, 23);
}
.downloads{

    display: flex;
    margin:40px;
    
    align-items: center;
    width: 100%;
    margin-left: -10px;
    
}
.downloads button{
    cursor:pointer;
    display: flex;
    margin-left:20px;
    
    height:67px;
    border:2px solid rgb(128, 128, 172);
    font-size:11px;
    width:155px;
    text-align: center;
    align-items: center;
    justify-content: center;
    gap:23px;
    font-weight:600;
    border-radius:50px;

    
}
.downloads button:hover{
    color:white;
    background:rgb(92, 92, 201);
}

.motive{
    display: flex;
    border:2px solid black;
    
    padding:100px ;
    background-color: rgb(72, 71, 71);
    color: white;
    width: 90vw;
    max-width: 1220px;
    
    justify-content: center;
    text-align: center;
    border-radius: 60px;
    font-size: 20px;
    border-bottom:12px solid rgb(137, 137, 137);
    border-left:12px solid rgb(129, 128, 128);
    gap:10px;
   animation:appear linear;
   animation-timeline: view();
   animation-range: entry 0% cover 40% ;

    
    
}
@keyframes appear{
    from{
        opacity:0;
        scale:0.5;
        transform: translateY(500px) ;

    }
    to{
        opacity:1;
        scale:1;
        transform: translateX(0) ;
    }
}



p{
    justify-content: center;
    text-align: center;
}
.pic{
    display: absolute;
    height: 40px;
    width: 80px;
    float:left;
    
}
.head{
    text-align: center;
    margin-right:20px;
}
@media(min-width:600px){
    body{
        height:100vh;
        width: 100%;
    }
}
/* Laptop ~1024px */
@medjia (min-width: 1024px) {
  .content {
    width: 60%;
    margin: 150px 80px;
  }
}
/*.carousel{
/*    margin:100px auto;
/*    width:100%;
/*    height:100px;
/*    border:2px solid black;
/*    display: flex;
/*    overflow-x: auto;
/*}
/*.carousel::-webkit-scrollbar{
/*    display:none;
/*
/*}
/*.card{
/*    flex:0 0 5em;/*not shrink after this*/
/*    height: auto;
/*    padding:1em;
/*    background-color: cornflowerblue;
/*    font-size:3rem;
/*    border-radius: .2em;
/*    align-items: center;
/*    text-align: center;
/*    
/*}
/*.group{
/*    display:flex;
/*    align-items: center;
/*    justify-content: center;
/*    gap:1em;
/*    animation:spin 5s infinite linear;
/*    padding-right: 1em;
/*
/*}
/*
/*@keyframes spin{
/*    from{tanslate:0%;}
/*    to{translate:-100%;}
/*}
/*
/* .card img{
/*    width:100%;
/*    height:100%;
/*    object-fit:contain;
/*}
/*

